--- a/opapc/index.html
+++ b/opapc/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Open-Plant</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+  <base href="/opapc/">  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
@@ -18,6 +17,6 @@
 
   <script src="assets/js/jquery.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-<script src="opapc/runtime-es2015.js" type="module"></script><script src="opapc/runtime-es5.js" nomodule defer></script><script src="opapc/polyfills-es5.js" nomodule defer></script><script src="opapc/polyfills-es2015.js" type="module"></script><script src="opapc/styles-es2015.js" type="module"></script><script src="opapc/styles-es5.js" nomodule defer></script><script src="opapc/vendor-es2015.js" type="module"></script><script src="opapc/vendor-es5.js" nomodule defer></script><script src="opapc/main-es2015.js" type="module"></script><script src="opapc/main-es5.js" nomodule defer></script></body>
+<script src="runtime-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="polyfills-es2015.js" type="module"></script><script src="styles-es2015.js" type="module"></script><script src="styles-es5.js" nomodule defer></script><script src="vendor-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule defer></script><script src="main-es2015.js" type="module"></script><script src="main-es5.js" nomodule defer></script></body>
 
 </html>
