--- a/opapc/index.html
+++ b/opapc/index.html
@@ -4,20 +4,20 @@
 <head>
   <meta charset="utf-8">
   <title>Open-Plant</title>
-  <base href="/">
+  <base href="/opapc/">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-  <link rel="stylesheet" href="assets/css/styles.css">
-  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./assets/fonts/font-awesome.min.css">
+  <link rel="stylesheet" href="./assets/css/styles.css">
+  <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 
 <body>
   <app-root></app-root>
 
-  <script src="assets/js/jquery.min.js"></script>
-  <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="./assets/js/jquery.min.js"></script>
+  <script src="./assets/bootstrap/js/bootstrap.min.js"></script>
 <script src="opapc/runtime-es2015.js" type="module"></script><script src="opapc/runtime-es5.js" nomodule defer></script><script src="opapc/polyfills-es5.js" nomodule defer></script><script src="opapc/polyfills-es2015.js" type="module"></script><script src="opapc/styles-es2015.js" type="module"></script><script src="opapc/styles-es5.js" nomodule defer></script><script src="opapc/vendor-es2015.js" type="module"></script><script src="opapc/vendor-es5.js" nomodule defer></script><script src="opapc/main-es2015.js" type="module"></script><script src="opapc/main-es5.js" nomodule defer></script></body>
 
 </html>
