--- a/opapc/index.html
+++ b/opapc/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Open-Plant</title>
-  <base href="/opapc/">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+  <base href="/opapc/">  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="./assets/fonts/font-awesome.min.css">
