--- a/opapc/index.html
+++ b/opapc/index.html
@@ -17,7 +17,9 @@
 
   <script src="./assets/js/jquery.min.js"></script>
   <script src="./assets/bootstrap/js/bootstrap.min.js"></script>
-<script src="runtime-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule defer></script><script src="polyfills-es5.js" nomodule defer></script>
+<script src="runtime-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule defer></script><script src="polyfills-es5.js" nomodule defer>
+  
+</script>
 <script src="polyfills-es2015.js" type="module"></script><script src="styles-es2015.js" type="module"></script><script src="styles-es5.js" nomodule defer>
 
 </script><script src="vendor-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule defer></script><script src="main-es2015.js" type="module">
