--- a/index.html
+++ b/index.html
@@ -5,18 +5,55 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
     <!-- Bootstrap CSS v5.0.2 -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"  integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"  
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
   </head>
   <body>
-    <div class="container">
-        <h1>Azrin Sani's Dev Showcase</h1>
-    </div>
-    <!-- Bootstrap JavaScript Libraries -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <div>
+      <div id="particles-js" class="position-fixed" style="top:0;bottom: 0;right: 0; left: 0;z-index: -1;">
+      
+      </div>
+      <div class="position-relative text-white vh-100 d-flex mb-3 flex-column justify-content-center align-items-center" >
+        <div class="d-flex flex-column text-white d-flex flex-column text-center mb-5">
+          <h1 class="display-1 border-top-3" style="font-weight:bold; line-height: 0.9;">Azrin Sani</h1>
+          <h3 class="display-5 bg-white px-5 py-1 shadow" style="color: #444; border-radius: 1rem;" >
+            <strong>Developer Showcase</strong>
+          </h3>            
+        </div>          
+        <figure>
+          <blockquote class="blockquote mt-3 text-center mx-5">
+            <i>A Client Focused, 11 years experienced Full Stack developer based in Australia. 
+               <b style="color: rgb(230, 240, 205);">Available for hire!</b></i>
+          </blockquote>
+        </figure>
+        
+  
+        <a href="mailto:azrinsani@gmail.com" class="btn btn-warning">Contact me</a>
+        <div class="my-3" style="color: #ddd;">- OR -</div>
+        <div>Scroll down to see my work</div>
+        <div class="d-flex blink">
+          <i class="fa fa-arrow-down fa-2x" aria-hidden="true"></i>
+          <i class="fa fa-arrow-down fa-2x mx-2" aria-hidden="true"></i>
+          <i class="fa fa-arrow-down fa-2x" aria-hidden="true"></i>
+        </div>
+      </div>
 
+  </div>
+
+  <div class="container text-white vh-100">
+    <div class="d-flex flex-column">
+      sdfdsfdsfdsfdsfdsf
+    </div>
+  </div>
+    <!-- Bootstrap JavaScript Libraries -->
+    <script src="https://kit.fontawesome.com/9b36b66950.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>    
+    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="particle.js"></script>
   </body>
 </html>
