--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </figure>
         
   
-        <a href="mailto:azrinsani@gmail.com" class="btn btn-warning">Contact me</a>
+        <a href="mailto:azrinsani@gmail.com" target="_blank" class="btn btn-warning">Contact me</a>
         <div class="my-3" style="color: #ddd;">- OR -</div>
         <div>Scroll down to see my work</div>
         <div class="d-flex blink">
@@ -53,7 +53,7 @@
     <script src="https://kit.fontawesome.com/9b36b66950.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>    
-    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="particle.js"></script>
   </body>
 </html>
