--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>          
         <figure>
           <blockquote class="blockquote mt-3 text-center mx-5" style="max-width: 700px;">
-            <i>A Client Focused, 11 years experienced Full Stack developer based in Australia. 
+            <i>A Client Focused, 11 years experienced, Full Stack developer based in Perth, Australia.<br><br>
                <b style="color: rgb(230, 240, 205);">Available for hire!</b></i>
           </blockquote>
         </figure>
@@ -149,6 +149,29 @@
     <h3 class="mt-2 mb-5" style="color: #ddd;">Open-Plant Charts</h3>
   </div>
 
+
+  <div class="container-fluid d-flex flex-column align-items-center py-5" 
+    style="background:#ffffffaa;
+    border-radius: 0rem 0rem 0 0;">
+    <h3 class="display-5 w-100 mt-3 text-center" 
+    style="font-weight: bold; " >
+      2017 - Open Source Vlix Http Web Server
+    </h3>    
+    <div class="d-flex flex-row justify-content-center flex-wrap">
+      <div class="rounded py-1 px-4 m-1 bg-warning" >Open Source Nuget Package</div>
+      <div class="rounded py-1 px-4 m-1 bg-warning" >C# .NET</div>      
+    </div>
+    <div class="my-1 mx-1 row text-center px-3 py-3" 
+      style="font-style: normal; max-width: 800px;">
+      Around 2017, I developed a simple Static Content Web Server for the purpose of embedding inside Open-Plant.
+      At that time there was no embeddable Http Server for dotnet framework. Most IoT Platforms had to use 3rd party web servers such as IIS and Apache. 
+      This project gave me a deep understanding about the web and TCP/IP. 
+      The project was made open source and published in Nuget. It has been download 2000 times.      
+    </div>
+    <a href="https://www.nuget.org/packages/VlixHttpServer/1.2.2" target="_blank" class="btn btn-warning p-3 mb-3" 
+    style="border-radius: 1rem; font-size: 1.5rem; border-color: #444; 
+    border-width: 3px;"><div class="blink">Click to view <strong>Nuget Package</strong></div></a>
+  </div>
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://kit.fontawesome.com/9b36b66950.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
