--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
 
   </div>
 
+  <div class="position-fixed d-flex align-items-center justify-content-end" style="height: 40px; width: 100%; background-color: #000; top: 0; left: 0; right: 0;">
+    <i class="fa fa-envelope text-white-50" style="margin-top: 1px;" aria-hidden="true"></i>
+    <a href="mailto:azrinsani@gmail.com" target="_blank" class="mx-2 text-white-50">azrinsani@gmail.com</a>
+  </div>
+  <div class="position-fixed" style="height: 40px; width: 100%; background-color: #000; bottom: 0; left: 0; right: 0;">
+
+  </div>
   <div class="container-fluid d-flex flex-column align-items-center" style="background-color: rgba(255, 255, 255, 0.123); border-radius: 0rem 0rem 0 0;">
     <h3 class="display-5 w-100 mt-3 text-center text-white-50" 
     style="font-weight: bold; " >
@@ -168,8 +175,8 @@
       This project gave me a deep understanding about the web and TCP/IP. 
       The project was made open source and published in Nuget. It has been download 2000 times.      
     </div>
-    <a href="https://www.nuget.org/packages/VlixHttpServer/1.2.2" target="_blank" class="btn btn-warning p-3 mb-3" 
-    style="border-radius: 1rem; font-size: 1.5rem; border-color: #444; 
+    <a href="https://www.nuget.org/packages/VlixHttpServer/1.2.2" target="_blank" class="btn btn-warning p-3" 
+    style="border-radius: 1rem; font-size: 1.5rem; border-color: #444; margin-bottom: 25vh; 
     border-width: 3px;"><div class="blink">Click to view <strong>Nuget Package</strong></div></a>
   </div>
     <!-- Bootstrap JavaScript Libraries -->
