--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </h3>    
     <div class="d-flex flex-row justify-content-center flex-wrap">
       <div class="rounded py-1 px-4 m-1 bg-warning" >Xamarin</div>
-      <div class="rounded py-1 px-4 m-1 bg-warning" >C# .NET</div>
+      <div class="rounded py-1 px-4 m-1 bg-warning" >ASP.NET</div>
       <div class="rounded py-1 px-4 m-1 bg-warning" >PostgreSQL</div>
       <div class="rounded py-1 px-4 m-1 bg-warning" >Entity Framework</div>
     </div>
@@ -148,10 +148,10 @@
     <h3 class="mt-2 mb-5" style="color: #ddd;">Open-Plant Analytics</h3>
 
     <div class="d-md-block d-none ">
-      <iframe width="800" height="450" src="https://www.youtube.com/embed/EQF5_3pke_A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>       
+      <iframe width="760" height="427.5" src="https://www.youtube.com/embed/EQF5_3pke_A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>       
     </div>  
     <div class="d-md-none d-block ">
-      <iframe width="420" height="236.25" src="https://www.youtube.com/embed/EQF5_3pke_A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>       
+      <iframe width="360" height="202.5" src="https://www.youtube.com/embed/EQF5_3pke_A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>       
     </div>      
     <h3 class="mt-2 mb-5" style="color: #ddd;">Open-Plant Charts</h3>
   </div>
