--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
       <img src="./images/chart.png" class="img-fluid border rounded shadow my-3" style="max-width: 600px;" />
       <div class="mb-3 mx-1 row text-center px-3 text-white" 
         style="font-style: normal; max-width: 800px;">
-        In 2019, I developed a Generic Time Series Chart 
-        (also called a Process Historian in the Process/Mining Industry) using JavaScript.
+        In 2019, I developed a generic time series chart 
+        (also called a Process Historian in the process/mining industry) using JavaScript.
         The chart was packaged as an NPM Library and mostly used inside Angular applications for my clients. 
-        A demo of the plugin can be seen here.
+        A demo of the time series chart can be seen here.
       </div>
       <a href="chart.html" target="_blank" class="btn btn-warning p-3 mb-3" 
       style="border-radius: 1rem; font-size: 1.5rem; border-color: #444; 
