--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="rounded py-1 px-4 m-1 bg-warning" >JavaScript</div>
         <div class="rounded py-1 px-4 m-1 bg-warning" >NPM</div>      
       </div>
-      <img src="./images/chart.png" class="img-fluid border rounded shadow my-3" style="max-width: 600px;" />
+      <img src="./images/chart.png" class="w-100 border rounded shadow my-3" style="max-width: 600px;" />
       <div class="mb-3 mx-1 row text-center px-3 text-white" 
         style="font-style: normal; max-width: 800px;">
         In 2019, I developed a generic time series chart 
@@ -197,7 +197,7 @@
         <div class="rounded py-1 px-4 m-1 bg-warning" >C# .NET</div>      
         <div class="rounded py-1 px-4 m-1 bg-warning" >WPF</div>      
       </div>
-      <img src="./images/dataminer.png" class="img-fluid border rounded shadow my-3" style="max-width: 600px;" />
+      <img src="./images/dataminer.png" class="img-fluid border rounded shadow my-3 w-100" style="max-width: 600px;" />
       <div class="my-1 mx-1 row text-center px-3 py-3" 
         style="font-style: normal; max-width: 800px; background-color: rgba(211, 211, 211, 0.548);">
         In 2018, I was contracted to create a Data Mining Application for a marketing organization.
