--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         They needed to collect data from the web (via web scraping). Data must then be organized 
         into specific structures inside a MySql Database.
         <br><br>
-        Details of this App is confidential though I made sure everything was GDPR compliant (strictest privacy) before
+        Details of this app is confidential though I made sure everything was GDPR compliant (strictest privacy) before
         accepting the work.
         <br><br>
         This App was very challenging to me in terms of reading HTML, processing HTTP cookies, organizing data, 
@@ -239,6 +239,29 @@
         style="border-radius: 1rem; font-size: 1.5rem; border-color: #444; margin-bottom: 25vh; 
         border-width: 3px;"><div class="blink">Click for <strong>Github Page</strong></div></a>
       </div>
+    </div>
+
+    <div class="container-fluid d-flex flex-column align-items-center py-5" 
+      style="background: #2a4c68; border-radius: 0rem 0rem 0 0;">
+      <h3 class="display-5 w-100 mt-3 text-center text-white" 
+      style="font-weight: bold; " >
+        2016 - Open-Plant OPC
+      </h3>    
+      <div class="d-flex flex-row justify-content-center flex-wrap">
+        <div class="rounded py-1 px-4 m-1 bg-warning" >WPF</div>
+        <div class="rounded py-1 px-4 m-1 bg-warning" >C# .NET</div>
+      </div>
+      <img src="./images/opc.png" class="w-100 mt-3" style="max-width: 450px;" />
+      <div class="text-white d-block mx-1 my-3 p-3 text-center" style="max-width: 800px; background-color: #1b3952;">
+        In 2016, I developed Open-Plant OPC, an Open Source Application that converts a legacy
+        industrial communications protocol, <a href="https://en.wikipedia.org/wiki/OPC_Data_Access" target="_blank" >OPC</a>, into Web APIs.
+        OPC is based on Microsoft's legacy <a href="https://en.wikipedia.org/wiki/Distributed_Component_Object_Model" target="_blank">DCOM</a> technology. 
+        The program ran as a windows service with WPF as it's front end.
+      </div>
+      <a href="https://github.com/Open-Plant/OpenPlantOPC" target="_blank" class="btn btn-warning p-3 mt-2 mb-2" 
+      style="border-radius: 1rem; font-size: 1.5rem; border-color: #444; 
+      border-width: 3px;"><div class="blink">Visit the <strong>Github Page</strong></div></a>
+      <img src="./images/howworks.png" class="w-100 mt-3 shadow" style="max-width: 750px;border-radius: 2rem; border: 3px solid #000;" />
     </div>
 
     <!-- Bootstrap JavaScript Libraries -->
