--- a/index.html
+++ b/index.html
@@ -15,9 +15,15 @@
   <body>
     
 
-    <div class="position-fixed d-flex align-items-center justify-content-end" style="height: 40px; width: 100%; background-color: #000; top: 0; left: 0; right: 0;">
-      <i class="fa fa-envelope text-white-50" style="margin-top: 1px;" aria-hidden="true"></i>
-      <a href="mailto:azrinsani@gmail.com" target="_blank" class="text-white-50" style="margin-right: 20px;margin-left: 5px;">azrinsani@gmail.com</a>
+    <div class="position-fixed d-flex flex-wrap align-items-center justify-content-end py-1" style="z-index: 1000; width: 100%; background-color: #002233; top: 0; left: 0; right: 0;">
+      <div class="d-flex align-items-center mx-1">
+        <i class="fa fa-phone text-white-50" style="padding-top: 3px;" aria-hidden="true"></i>
+        <a href="tel:+61422110683" target="_blank" class="text-white-50" style="margin-right: 15px;margin-left: 3px;">+61422110683</a>
+      </div>
+      <div class="d-flex align-items-center mx-1">
+        <i class="fa fa-envelope text-white-50" style="padding-top: 3px;" aria-hidden="true"></i>
+        <a href="mailto:azrinsani@gmail.com" target="_blank" class="text-white-50" style="margin-right: 15px;margin-left: 3px;">azrinsani@gmail.com</a>
+      </div>
     </div>
 
     <div>
