--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <!-- Bootstrap CSS v5.0.2 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"  
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
   </head>
   <body>
     
@@ -226,8 +228,8 @@
         2017 - Vlix Web Server
       </h3>    
       <div class="d-flex flex-row justify-content-center flex-wrap">
-        <div class="rounded py-1 px-4 m-1 bg-warning" >Open Source</div>
         <div class="rounded py-1 px-4 m-1 bg-warning" >C# .NET</div>      
+        <div class="rounded py-1 px-4 m-1 bg-warning" >Nuget</div>      
       </div>
       <div class="my-1 mx-1 row text-center px-3 py-3" 
         style="font-style: normal; max-width: 800px;">
@@ -270,6 +272,40 @@
       <img src="./images/howworks.png" class="w-100 mt-3 shadow" style="max-width: 750px;border-radius: 2rem; border: 3px solid #000;" />
     </div>
 
+    <div class="container-fluid d-flex flex-column align-items-center py-5" 
+    style="background:#b1f8f2aa;
+    border-radius: 0rem 0rem 0 0;">
+    <h3 class="display-5 w-100 mt-3 text-center" 
+    style="font-weight: bold; " >
+      2020 - Authzilla 
+      <!-- <span style="color: rgb(148, 148, 148); font-weight: normal; font-size: 75%;">(Abandoned)</span> -->
+    </h3>    
+    <div class="d-flex flex-row justify-content-center flex-wrap">
+      <div class="rounded py-1 px-4 m-1 bg-warning" >Identity Server</div>
+      <div class="rounded py-1 px-4 m-1 bg-warning" >Cyber Security</div>
+      <div class="rounded py-1 px-4 m-1 bg-warning" >C# .NET</div>      
+    </div>
+    <div class="my-3 mx-1 row text-center px-3 py-3" 
+      style="font-style: normal; max-width: 800px; background-color: #d4ecf3a9;">
+      In 2020, while stuck during Covid, I created a wrapper program around Identity Server named Authzilla.      
+      <br>
+      <br>
+      Authzilla is a MicroService (Server) which repackages Identity Server 4, transforming it into a much simpler 
+      out-of-the-box solution. Identity Server is complicated and time consuming to manage and setup. Unlike Identity Server, 
+      Authzilla's installation is a breeze, like how one installs any App.
+      I had plans to make Authzilla a commercial app as I believe people 
+      wouldn't mind paying a few hundred bucks if it saves them time.
+      <br>
+      <br>
+      The project was abandoned and was made Open Source (Under Apache License 2.0). I had other commitments at that time. 
+      Though abandoned, this short stint gave me a strong grasp on web security and OAuth authentication as a whole.   
+    </div>
+    <div class="d-flex flex-column">
+      <a href="https://github.com/azrinsani/Authzilla" target="_blank" class="btn btn-warning p-3" 
+      style="border-radius: 1rem; font-size: 1.5rem; border-color: #444; margin-bottom: 25vh; 
+      border-width: 3px;"><div class="blink">Click for <strong>Github Page</strong></div></a>
+    </div>
+  </div>
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://kit.fontawesome.com/9b36b66950.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
