--- a/index.html
+++ b/index.html
@@ -127,12 +127,12 @@
         <div class="rounded py-1 px-4 m-1 bg-warning" >NPM</div>      
       </div>
       <img src="./images/chart.png" class="w-100 border rounded shadow my-3" style="max-width: 600px;" />
-      <div class="mb-3 mx-1 row text-center px-3 text-white" 
+      <div class="mb-3 mx-1 text-center px-3 text-white" 
         style="font-style: normal; max-width: 800px;">
-        In 2019, I developed a time series chart library using JavaScript. In the process/mining industries, 
-        such a chart is also known as an Operational Historian. 
+        In 2019, I developed a time series chart library using JavaScript. In the process & mining industry, 
+        such chart is known as an <a href="https://en.wikipedia.org/wiki/Operational_historian" style="color: #81b2da;" target="_blank">Operational Historian</a>. 
         The chart was packaged as an NPM Library and used inside Angular applications which I developed for my clients. 
-        A LIVE demo of the time series chart is hosted here.
+        A LIVE demo of the chart is hosted here.
       </div>
       <a href="chart.html" target="_blank" class="btn btn-warning p-3 mb-3" 
       style="border-radius: 1rem; font-size: 1.5rem; border-color: #444; 
@@ -179,7 +179,7 @@
         <br>
         Under Open-Plant I undertook several projects, mostly creating front end applications for various clients. 
         Angular and WPF was the technology of choice. One major client was US Based 
-        <a href="https://www.robbinstbm.com/" target="_blank">The Robbins Company</a>.
+        <a href="https://www.robbinstbm.com/" style="color: #81b2da;" target="_blank">The Robbins Company</a>.
         I developed a Tunnel Boring Machine System for them written in ASP.NET MVC and WPF. 
         Back End was powered by Open-Plant.   
       </div>    
